[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poraque"
version = "0.0.3"
authors = [
  { name="Leandro Seixas", email="leandro.fisica@gmail.com" },
]
description = "Electronic structure with graph neural networks"
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.10"
dependencies = [
    'numpy',
    'pandas',
    'ase',
    'torch',
    'networkx',
    'scipy',
    'matplotlib'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/seixasgroup/poraque"
